test/files/neg/warn-unused-patvars.check
warn-unused-patvars.scala:11: warning: private val x in trait Boundings is never used
  private val x = 42                      // warn, sanity check
              ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
